# self-claw

./: .env.example  .gitignore  README.md  SPEC.md  pyproject.toml
.agents/: principle.md
.agents/memory/long-term/: faq.md  onboarding.md
.agents/skills/create-skill/: SKILL.md
src/: config.py
src/agents/: __init__.py  loop.py  main.py  prompt.py  sub.py
src/api/: __init__.py  routes.py
src/app/: __init__.py  main.py
src/channels/: __init__.py  adapter.py
src/contracts/: __init__.py  errors.py  models.py
src/models/: __init__.py  dev_adapter.py  llm.py  retry.py  router.py
src/services/: __init__.py  agent_service.py  cost.py  file_workspace.py  hook_service.py  memory.py  notification.py  scheduler.py  skill_service.py  task_service.py
src/sessions/: __init__.py  manager.py
src/skills/: __init__.py  registry.py
src/storage/: __init__.py  database.py
src/tools/: __init__.py  builtins.py  registry.py
src/web/: app.js  index.html  style.css
tests/contracts/: test_skills.py
tests/integration/: test_api.py
tests/unit/: test_agent_service_memory.py  test_channels.py  test_file_workspace.py  test_hook_service.py  test_memory.py  test_prompt.py  test_retry.py  test_storage.py  test_tasks.py  test_tools.py
